--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,13 @@
     <artifactId>coinCounter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.openpnp/opencv -->
+        <dependency>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>3.4.2-0</version>
+        </dependency>
 
+    </dependencies>
 </project>
