--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,12 @@
     <artifactId>coinCounter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.openpnp/opencv -->
         <dependency>
@@ -23,7 +29,6 @@
             <version>5.4.2</version>
             <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 </project>
